--- a/index.html
+++ b/index.html
@@ -5,20 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>웹툰 랜딩 테스트</title>
 
-  <!-- GTM 코드 자리 -->
-  <script>
-    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l;j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id=GTM-PVWXVGXG'+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PVWXVGXG');
-  </script>
+ <!-- Google Tag Manager -->
+<script>
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l;j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id=GTM-PVWXVGXG'+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PVWXVGXG');
+</script>
+<!-- End Google Tag Manager -->
+  
 </head>
 
 <body style="height: 2000px;">
-  <!-- GTM noscript 백업 -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PVWXVGXG"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+ <!-- Google Tag Manager (noscript) -->
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PVWXVGXG"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
 
   <div id="content"></div>
 
